--- a/front end/rcf-soluciones-informaticas-angular/src/app/admin/pages/ordenes-page/ordenes-page.html
+++ b/front end/rcf-soluciones-informaticas-angular/src/app/admin/pages/ordenes-page/ordenes-page.html
@@ -8,7 +8,14 @@
         </button>
     </div>
     <div class="bg-white rounded-lg p-4 my-4">
-        Buscador de ordenes (a implementar)
+        <div class="mb-4">
+            <input
+                type="text"
+                placeholder="Codigo de estado..."
+                (input)="applyFilter($event)"
+                class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+            />
+        </div>
     </div>
     <div>
         <div class="mat-elevation-z8">
