--- a/front end/rcf-soluciones-informaticas-angular/src/app/auth/pages/login-page/login-page.html
+++ b/front end/rcf-soluciones-informaticas-angular/src/app/auth/pages/login-page/login-page.html
@@ -1,35 +1,29 @@
 <div class="min-h-screen flex flex-col items-center justify-center bg-gray-100 p-6">
     <div class="w-full max-w-md bg-white rounded-lg shadow-lg p-8">
-        <h1 class="text-2xl font-bold text-center mb-6 text-gray-800">Iniciar Sesión</h1>
-        <form [formGroup]="loginForm"  class="space-y-5">
+        <div class="text-center space-y-4">
+            <h1 class="text-5xl text-blue-800 font-bold ">RFC Soluciones Informaticas</h1>
+            <p class="text-slate-900  text-4xl font-black leading-tight tracking-[-0.033em]">Bienvenido
+                de nuevo</p>
+            <p class="text-slate-500 dark:text-slate-400 text-base">Ingresa a tu cuenta para continuar</p>
+        </div>
+        <form [formGroup]="loginForm" class="space-y-5">
             <div>
                 <label for="email" class="block text-gray-700 mb-1">Correo:</label>
-                <input
-                    id="email"
-                    formControlName="email"
-                    type="email"
+                <input id="email" formControlName="email" type="email"
                     class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
-                    autocomplete="email"
-                />
+                    autocomplete="email" />
             </div>
             <div>
                 <label for="password" class="block text-gray-700 mb-1">Contraseña:</label>
-                <input
-                    id="password"
-                    type="password"
-                    formControlName="password"
+                <input id="password" type="password" formControlName="password"
                     class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
-                    autocomplete="current-password"
-                />
+                    autocomplete="current-password" />
             </div>
-            <button
-                type="submit"
-                [disabled]="loginForm.invalid"
-                class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition disabled:opacity-50"
-            >
+            <button type="submit" [disabled]="loginForm.invalid"
+                class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition disabled:opacity-50">
                 Ingresar
             </button>
-            <button type="button" (click)="login()">Ir Login KeyCloak</button>
+            <a routerLink="/auth/register" class="text-blue-600 hover:underline">¿No tienes una cuenta? Regístrate</a>
 
         </form>
     </div>
